--- a/r1/r1.md
+++ b/r1/r1.md
@@ -533,6 +533,7 @@ printf("%d\n", pi_int);
   - 例如在我的 64 位 Ubuntu 22.04 系统上，`size_t` 是 `unsigned long`，而在我的 64 位 Windows 11 系统上它是 `unsigned long long`。
   - 在 32 位系统上，它可能是某种 32 位无符号整数。
 - 让 VSCode 告诉你它到底是啥。
+- 使用 `%zu`。（但貌似 MinGW 对它的支持有一点问题？）
 
 ---
 
