--- a/r3/r3.md
+++ b/r3/r3.md
@@ -336,7 +336,7 @@ void insertion_sort(int *begin, int *end);
 
 ## 二分查找
 
-接受一个有序（升序）序列以及一个元素 `target` ，查找第一个比 `target` 大的元素。
+接受一个有序（升序）序列以及一个元素 `target` ，查找 `target` 的位置。
 
 ```c
 int binary_search(int *a, int n, int target);
