open mode in fopen

--- a/r4/r4.md
+++ b/r4/r4.md
@@ -91,10 +91,10 @@ freopen("output.txt", "w", stdout);
 ## 文件 IO
 
 ```c
-FILE *infile = fopen("relative/path/to/my/input/file");
+FILE *infile = fopen("relative/path/to/my/input/file", "r");
 int a, b;
 fscanf(infile, "%d%d", &a, &b);
-FILE *outfile = fopen("relative/path/to/my/output/file");
+FILE *outfile = fopen("relative/path/to/my/output/file", "w");
 fprintf(outfile, "%d\n", a + b);
 fclose(infile);
 fclose(outfile);
