note on the implementation-dependent behavior

--- a/r5/r5.md
+++ b/r5/r5.md
@@ -327,8 +327,10 @@ $$
 
 ## bitfield
 
+注意：以下代码的行为是 implementation-dependent 的
+
 ```c
-struct Instruction {
+struct Instruction { // 很有可能是反过来的
   unsigned opcode : 3;
   unsigned r1 : 3;
   unsigned r2 : 3;
